Only return non-default/empty signs